implementamiento de manejos de errores DTO en autenticacion